[tool.poetry]
name = "cinder"
version = "0.1.0"
description = ""
authors = ["Eric Brown <ebrown5676@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.2.2"

[tool.poetry.scripts]
cinder = "cinder.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
